Title saqib added

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -31,4 +31,19 @@
 
         />
 
+    <TextView
+        android:id="@+id/title_saqib"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+
+        android:text="Saqib Javed"
+        android:textSize="20dp"
+
+        android:layout_below="@id/project_description"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="20dp"
+
+        />
+
+
 </RelativeLayout>
