--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,75 +1,59 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    tools:context=".MainActivity"
+    android:background="@color/light_gray">
 
-    <TextView
-        android:id="@+id/project_name"
+    <RelativeLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_margin="15dp"
+        android:padding="15dp">
 
-        android:text="@string/project_name"
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/imageView_logo"
+            android:layout_marginTop="30dp"
+            app:srcCompat="@drawable/ic_logo"
+            android:maxWidth="300dp"
+            android:adjustViewBounds="true"
+            android:layout_centerHorizontal="true"/>
 
-        android:layout_centerInParent="true"
+        <TextView
+            android:id="@+id/textview_main_head"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/imageView_logo"
+            android:layout_marginTop="47dp"
+            android:text="Welcome"
+            android:textAlignment="center"
+            android:textAppearance="@style/TextAppearance.AppCompat.Headline" />
 
-        />
+        <Button
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/button_login"
+            android:text="log in"
+            android:layout_marginTop="100dp"
+            android:layout_below="@id/textview_main_head"
+            android:layout_marginLeft="70dp"
+            android:layout_marginRight="70dp"/>
 
-    <TextView
-        android:id="@+id/project_description"
-        android:layout_width="260dp"
-        android:layout_height="wrap_content"
+        <Button
+            android:id="@+id/button_register"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/button_login"
+            android:layout_marginLeft="70dp"
+            android:layout_marginTop="35dp"
+            android:layout_marginRight="70dp"
+            android:text="Register" />
 
-        android:text="@string/project_description"
-        android:textSize="20dp"
 
-        android:layout_below="@id/project_name"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="50dp"
+    </RelativeLayout>
 
-        />
-
-    <TextView
-        android:id="@+id/title_saqib"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-
-        android:text="Saqib Javed"
-        android:textSize="20dp"
-
-        android:layout_below="@id/project_description"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="20dp"
-
-        />
-    <TextView
-        android:id="@+id/title_swarnadeep"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-
-        android:text="Swarnadeep_roy"
-        android:textSize="20dp"
-
-        android:layout_below="@id/title_saqib"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="20dp"
-
-        />
-
-    <TextView
-        android:id="@+id/title_gourab"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-
-        android:text="Gourab Nandi"
-        android:textSize="20dp"
-
-        android:layout_below="@id/title_swarnadeep"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="20dp"
-
-        />
-
-</RelativeLayout>
+</ScrollView>
