--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -179,7 +179,7 @@
             <ProgressBar
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:id="@+id/progressbar_log"
+                android:id="@+id/progressbar_profile"
                 android:layout_centerVertical="true"
                 android:layout_centerHorizontal="true"
                 android:elevation="10dp"
