log and reg done

--- a/app/src/main/res/layout/activity_forgot_password.xml
+++ b/app/src/main/res/layout/activity_forgot_password.xml
@@ -35,14 +35,15 @@
             android:textColor="@color/black"/>
 
         <EditText
+            android:id="@+id/editText_password_reset_email"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/editText_password_reset_email"
             android:layout_below="@+id/textView_password_reset_email"
+            android:background="@drawable/border"
             android:hint="Enter your email"
+            android:minHeight="48dp"
             android:padding="5dp"
-            android:textSize="15sp"
-            android:background="@drawable/border"/>
+            android:textSize="15sp" />
 
         <Button
             android:layout_width="match_parent"
