--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,115 +1,185 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+
+<androidx.swiperefreshlayout.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".LoginActivity"
-    android:background="@color/light_gray">
+    android:id="@+id/swipeContainer">
 
-    <RelativeLayout
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:padding="15dp"
-        android:layout_margin="15dp"
-        android:background="@color/white"
-        >
+        android:layout_height="match_parent"
+        android:background="@color/light_gray"
+        tools:context=".LoginActivity">
 
-        <TextView
+
+
+        <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/textView_login_head"
-            android:text="Log in to BoiiMela"
-            android:layout_marginTop="30dp"
-            android:textAlignment="center"
-            android:textAppearance="@style/TextAppearance.AppCompat.Headline"/>
+            android:id="@+id/RL_email"
+            android:layout_margin="15dp"
+            android:background="@color/white"
+            android:padding="15dp">
 
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:id="@+id/textView_login_email"
-            android:text="Email"
-            android:layout_marginTop="50dp"
-            android:textColor="#555555"
-            android:textSize="15sp"
-            android:padding="6dp"
-            android:layout_below="@+id/textView_login_head"/>
+            <TextView
+                android:id="@+id/textView_login_head"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="30dp"
+                android:text="Log in to BoiiMela"
+                android:textAlignment="center"
+                android:textAppearance="@style/TextAppearance.AppCompat.Headline" />
 
-        <EditText
-            android:id="@+id/editText_login_email"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/textView_login_email"
-            android:background="@drawable/border"
-            android:hint="Enter email"
-            android:inputType="textEmailAddress"
-            android:minHeight="48dp"
-            android:padding="6dp"
-            android:textSize="15sp" />
+            <TextView
+                android:id="@+id/textView_login_email"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/textView_login_head"
+                android:layout_marginTop="50dp"
+                android:padding="6dp"
+                android:text="Email"
+                android:textColor="#555555"
+                android:textSize="15sp" />
 
-
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:id="@+id/textView_login_pwd"
-            android:text="Password"
-            android:layout_marginTop="15dp"
-            android:textColor="#555555"
-            android:textSize="15sp"
-            android:padding="6dp"
-            android:layout_below="@+id/editText_login_email"/>
-
-        <ImageView
-            android:layout_width="30dp"
-            android:layout_height="32dp"
-            android:id="@+id/imageView_show_hide_pwd"
-            android:layout_below="@+id/textView_login_pwd"/>
-
-        <EditText
-            android:id="@+id/editText_login_pwd"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/textView_login_pwd"
-            android:background="@drawable/border"
-            android:hint="Enter password"
-            android:inputType="textPassword"
-            android:layout_marginStart="30dp"
-            android:minHeight="48dp"
-            android:padding="6dp"
-            android:textSize="15sp" />
-
-        <Button
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Log In"
-            android:id="@+id/button_log"
-            android:layout_marginTop="50dp"
-            android:layout_marginRight="70dp"
-            android:layout_marginLeft="70dp"
-            android:layout_below="@+id/editText_login_pwd"/>
-
-        <Button
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Forgot Password ???"
-            android:id="@+id/button_forgot_password"
-            android:layout_marginTop="20dp"
-            android:layout_marginRight="70dp"
-            android:layout_marginLeft="70dp"
-            android:layout_below="@+id/button_log"/>
-
-        <ProgressBar
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/progressbar_log"
-            android:layout_centerVertical="true"
-            android:layout_centerHorizontal="true"
-            android:elevation="10dp"
-            android:visibility="gone"/>
+            <EditText
+                android:id="@+id/editText_login_email"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/textView_login_email"
+                android:background="@drawable/border"
+                android:hint="Enter email"
+                android:inputType="textEmailAddress"
+                android:minHeight="48dp"
+                android:padding="6dp"
+                android:textSize="15sp" />
 
 
-    </RelativeLayout>
+            <TextView
+                android:id="@+id/textView_login_pwd"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/editText_login_email"
+                android:layout_marginTop="15dp"
+                android:padding="6dp"
+                android:text="Password"
+                android:textColor="#555555"
+                android:textSize="15sp" />
+
+            <ImageView
+                android:id="@+id/imageView_show_hide_pwd"
+                android:layout_width="30dp"
+                android:layout_height="32dp"
+                android:layout_below="@+id/textView_login_pwd" />
+
+            <EditText
+                android:id="@+id/editText_login_pwd"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/textView_login_pwd"
+                android:layout_marginStart="30dp"
+                android:background="@drawable/border"
+                android:hint="Enter password"
+                android:inputType="textPassword"
+                android:minHeight="48dp"
+                android:padding="6dp"
+                android:textSize="15sp" />
+
+            <Button
+                android:id="@+id/button_log"
+                android:layout_width="180dp"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/editText_login_pwd"
+                android:layout_marginLeft="70dp"
+                android:layout_marginTop="40dp"
+                android:layout_centerHorizontal="true"
+                android:layout_centerVertical="true"
+                android:text="Log In" />
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/button_log"
+                android:layout_marginTop="30dp"
+                android:layout_marginBottom="20dp"
+                android:orientation="vertical">
+
+                <TextView
+                    android:id="@+id/textView_register"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@+id/button_log"
+                    android:layout_marginTop="15dp"
+                    android:padding="6dp"
+                    android:text="Don't have an account?"
+                    android:textAlignment="center"
+                    android:textColor="#555555"
+                    android:textSize="15sp" />
+
+                <TextView
+                    android:id="@+id/textView_register_link"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@+id/textView_register"
+                    android:layout_marginTop="15dp"
+                    android:text="@string/register"
+                    android:textAlignment="center"
+                    android:textColor="@color/purple_500"
+                    android:textAppearance="@style/TextAppearance.AppCompat.Menu" />
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/button_log"
+                android:layout_marginTop="30dp"
+                android:layout_marginBottom="20dp"
+                android:layout_alignParentEnd="true"
+                android:orientation="vertical">
+
+                <TextView
+                    android:id="@+id/textView_forgot_password"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@+id/button_log"
+                    android:layout_marginTop="15dp"
+                    android:padding="6dp"
+                    android:text="Forgot Password?"
+                    android:textAlignment="center"
+                    android:textColor="#555555"
+                    android:textSize="15sp" />
+
+                <TextView
+                    android:id="@+id/textView_forgot_password_link"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@+id/textView_register"
+                    android:layout_marginTop="15dp"
+                    android:text="@string/reset_password"
+                    android:textAlignment="center"
+                    android:textColor="@color/purple_500"
+                    android:textAppearance="@style/TextAppearance.AppCompat.Menu" />
+
+            </LinearLayout>
 
 
 
-</ScrollView>
+            <ProgressBar
+                android:id="@+id/progressbar_log"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerHorizontal="true"
+                android:layout_centerVertical="true"
+                android:elevation="10dp"
+                android:visibility="gone" />
+
+
+        </RelativeLayout>
+
+    </ScrollView>
+
+
+
+</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
