--- a/app/src/main/res/layout/fragment_chat.xml
+++ b/app/src/main/res/layout/fragment_chat.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -11,4 +11,27 @@
         android:layout_height="match_parent"
         android:text="Chat Fragment" />
 
-</FrameLayout>
+    <TextView
+        android:id="@+id/under_construction"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+
+        android:text="Under Construction..."
+        android:textSize="30dp"
+
+        android:layout_centerInParent="true"
+        android:gravity="center"
+
+        />
+
+    <ImageView
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+
+        android:src="@drawable/icon_construction"
+        android:layout_below="@id/under_construction"
+        android:layout_centerHorizontal="true"
+
+        />
+
+</RelativeLayout>
