--- a/app/src/main/res/layout/fragment_my_ads.xml
+++ b/app/src/main/res/layout/fragment_my_ads.xml
@@ -11,6 +11,29 @@
         android:layout_height="match_parent"
         android:text="My Ads Fragment" />
 
+    <TextView
+        android:id="@+id/under_construction"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+
+        android:text="Under Construction..."
+        android:textSize="30dp"
+
+        android:layout_centerInParent="true"
+        android:gravity="center"
+
+        />
+
+    <ImageView
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+
+        android:src="@drawable/icon_construction"
+        android:layout_below="@id/under_construction"
+        android:layout_centerHorizontal="true"
+
+        />
+
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/fab_upload"
         android:layout_width="wrap_content"
