--- a/app/src/main/res/layout/activity_base.xml
+++ b/app/src/main/res/layout/activity_base.xml
@@ -6,29 +6,30 @@
     android:layout_height="match_parent"
     tools:context=".BaseActivity">
 
-    <androidx.drawerlayout.widget.DrawerLayout
-        android:id="@+id/drawer_layout"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
+<!--    <androidx.drawerlayout.widget.DrawerLayout-->
+<!--        android:id="@+id/drawer_layout"-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="match_parent">-->
 
-        <com.google.android.material.navigation.NavigationView
-            android:id="@+id/navmenu"
-            android:layout_width="wrap_content"
+<!--        <com.google.android.material.navigation.NavigationView-->
+<!--            android:id="@+id/navmenu"-->
+<!--            android:layout_width="wrap_content"-->
+<!--            android:layout_height="match_parent"-->
+<!--            android:layout_gravity="start"-->
+<!--            app:menu="@menu/navigation_menu" />-->
+
+<!--    </androidx.drawerlayout.widget.DrawerLayout>-->
+
+        <FrameLayout
+            android:id="@+id/fragment_layout"
+            android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_gravity="start"
-            app:menu="@menu/navigation_menu" />
 
-    </androidx.drawerlayout.widget.DrawerLayout>
-
-    <FrameLayout
-        android:id="@+id/fragment_layout"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-
-        android:layout_above="@id/bottom_nav" >
+            android:layout_above="@id/bottom_nav" >
 
 
-    </FrameLayout>
+        </FrameLayout>
+
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/bottom_nav"
