--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -1,36 +1,46 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".HomeFragment">
+    tools:context=".HomeFragment"
+    >
 
     <!-- TODO: Update blank fragment layout -->
 
-    <TextView
-        android:id="@+id/under_construction"
+<!--    <TextView-->
+<!--        android:id="@+id/under_construction"-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="wrap_content"-->
+
+<!--        android:text="Under Construction..."-->
+<!--        android:textSize="30dp"-->
+
+<!--        android:layout_centerInParent="true"-->
+<!--        android:gravity="center"-->
+
+<!--        />-->
+
+<!--    <ImageView-->
+<!--        android:layout_width="50dp"-->
+<!--        android:layout_height="50dp"-->
+
+<!--        android:src="@drawable/icon_construction"-->
+<!--        android:layout_below="@id/under_construction"-->
+<!--        android:layout_centerHorizontal="true"-->
+
+<!--        />-->
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recycler_view"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
 
-        android:text="Under Construction..."
-        android:textSize="30dp"
 
-        android:layout_centerInParent="true"
-        android:gravity="center"
-
-        />
-
-    <ImageView
-        android:layout_width="50dp"
-        android:layout_height="50dp"
-
-        android:src="@drawable/icon_construction"
-        android:layout_below="@id/under_construction"
-        android:layout_centerHorizontal="true"
 
         />
 
 
 
-</RelativeLayout>
+</GridLayout>
