--- a/app/src/main/res/layout/fragment_book.xml
+++ b/app/src/main/res/layout/fragment_book.xml
@@ -7,7 +7,18 @@
 
     <!-- TODO: Update blank fragment layout -->
 
+    <TextView
+        android:id="@+id/uid"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
 
+
+        android:text="Profile"
+        android:gravity="center"
+
+        android:layout_centerInParent="true"
+
+        />
 
 
 </RelativeLayout>
