--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -4,8 +4,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".UserProfile"
-    android:background="@color/material_dynamic_neutral80">
+    tools:context=".ProfileFragment"
+    android:background="@color/material_dynamic_neutral80"
+
+    >
 
     <LinearLayout
         android:layout_width="match_parent"
