--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -88,19 +88,32 @@
 
             <Button
                 android:id="@+id/button_log"
-                android:layout_width="180dp"
+                android:layout_width="150dp"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/editText_login_pwd"
                 android:layout_marginLeft="70dp"
                 android:layout_marginTop="40dp"
                 android:layout_centerHorizontal="true"
                 android:layout_centerVertical="true"
+                android:background="@drawable/border"
                 android:text="Log In" />
+
+            <Button
+                android:id="@+id/button_google"
+                android:layout_width="150dp"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/button_log"
+                android:layout_marginLeft="70dp"
+                android:layout_marginTop="30dp"
+                android:layout_centerHorizontal="true"
+                android:layout_centerVertical="true"
+                android:text="Google"
+                android:background="@drawable/border"/>
 
             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_below="@+id/button_log"
+                android:layout_below="@+id/button_google"
                 android:layout_marginTop="30dp"
                 android:layout_marginBottom="20dp"
                 android:orientation="vertical">
@@ -122,7 +135,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_below="@+id/textView_register"
-                    android:layout_marginTop="15dp"
+                    android:layout_marginTop="10dp"
                     android:text="@string/register"
                     android:textAlignment="center"
                     android:textColor="@color/purple_500"
@@ -133,7 +146,7 @@
             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_below="@+id/button_log"
+                android:layout_below="@+id/button_google"
                 android:layout_marginTop="30dp"
                 android:layout_marginBottom="20dp"
                 android:layout_alignParentEnd="true"
@@ -156,7 +169,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_below="@+id/textView_register"
-                    android:layout_marginTop="15dp"
+                    android:layout_marginTop="10dp"
                     android:text="@string/reset_password"
                     android:textAlignment="center"
                     android:textColor="@color/purple_500"
