Changes made on bookFragment - Saqib

--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -18,7 +18,7 @@
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="250dp"
-            android:background="#5CC09F"
+            android:background="#82D9FB"
             tools:ignore="UnknownId">
 
             <ImageView
