--- a/app/src/main/res/layout/fragment_book.xml
+++ b/app/src/main/res/layout/fragment_book.xml
@@ -3,20 +3,106 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:card_view="http://schemas.android.com/apk/res-auto"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".BookFragment">
 
     <!-- TODO: Update blank fragment layout -->
 
-    <TextView
-        android:id="@+id/uid"
-        android:layout_width="match_parent"
+    <androidx.cardview.widget.CardView
+        xmlns:card_view="http://schemas.android.com/apk/res-auto"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        card_view:cardBackgroundColor="#eeeeff"
+        app:cardElevation="8dp"
+        app:cardCornerRadius="20dp"
+        android:layout_margin="16dp"
+
+        android:id="@+id/imageViewPager_Card"
+
+        >
+        <androidx.viewpager.widget.ViewPager
+            android:layout_width="match_parent"
+            android:layout_height="300dp"
+            android:id="@+id/imageViewPager"
+
+            android:layout_margin="5dp"
+
+            />
+
+    </androidx.cardview.widget.CardView>
+
+    <androidx.cardview.widget.CardView
+        android:layout_width="300dp"
         android:layout_height="wrap_content"
 
+        android:id="@+id/book_title_card"
+        android:layout_below="@id/imageViewPager_Card"
 
-        android:text="Profile"
-        android:gravity="center"
+        card_view:cardBackgroundColor="#eeeeff"
+        app:cardElevation="8dp"
+        app:cardCornerRadius="20dp"
+        android:layout_margin="16dp"
+        android:layout_centerHorizontal="true"
 
-        android:layout_centerInParent="true"
+        >
+
+        <TextView
+            android:id="@+id/book_title"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+
+            android:text="Book Title"
+            android:textSize="25dp"
+            android:gravity="center"
+
+            android:layout_below="@id/imageViewPager_Card"
+
+            />
+
+    </androidx.cardview.widget.CardView>
+
+
+    <androidx.cardview.widget.CardView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+
+        android:id="@+id/book_price_card"
+        android:layout_below="@id/book_title_card"
+
+        card_view:cardBackgroundColor="#9A9AED"
+        app:cardElevation="8dp"
+        app:cardCornerRadius="20dp"
+        android:layout_margin="16dp"
+
+        >
+
+    <TextView
+        android:id="@+id/book_price"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+
+        android:text="Book Price"
+        android:textSize="25dp"
+        android:gravity="right"
+
+        android:layout_below="@id/book_title_card"
+        android:layout_margin="5dp"
+        />
+
+    </androidx.cardview.widget.CardView>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+
+        android:text="INR"
+
+        android:layout_below="@id/book_price_card"
+        android:layout_alignRight="@id/book_price_card"
+        android:layout_marginRight="10dp"
+        android:layout_marginTop="-15dp"
 
         />
 
