--- a/app/src/main/res/layout/message.xml
+++ b/app/src/main/res/layout/message.xml
@@ -1,46 +1,65 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
 
-    <TextView
-        android:id="@+id/tvUsername"
+    app:cardCornerRadius="20dp"
+    android:layout_marginTop="15dp"
+    android:paddingTop="10dp"
+    app:cardElevation="10dp"
+    android:backgroundTint="#eeeeef"
+
+
+    >
+
+    <RelativeLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:padding="10dp"
 
-        android:text="username"
-        android:textSize="18dp"
-        android:textColor="@color/purple_500"
+        >
 
-        android:layout_margin="20dp"
+        <TextView
+            android:id="@+id/tvUsername"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
 
-        />
+            android:text="username"
+            android:textSize="18dp"
+            android:textColor="@color/purple_500"
 
-    <TextView
-        android:id="@+id/tvMessage"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+            android:layout_margin="20dp"
 
-        android:text="Message"
-        android:textSize="25dp"
-        android:textColor="@color/black"
+            />
 
-        android:layout_below="@id/tvUsername"
-        android:layout_marginLeft="10dp"
+        <TextView
+            android:id="@+id/tvMessage"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
 
-        />
+            android:text="Message"
+            android:textSize="25dp"
+            android:textColor="@color/black"
 
-    <TextView
-        android:id="@+id/tvTime"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+            android:layout_below="@id/tvUsername"
+            android:layout_marginLeft="10dp"
 
-        android:text="Time"
+            />
 
-        android:layout_alignParentRight="true"
-        android:layout_marginRight="30dp"
-        android:layout_marginTop="10dp"
+        <TextView
+            android:id="@+id/tvTime"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
 
-        />
+            android:text="Time"
 
-</RelativeLayout>
+            android:layout_alignParentRight="true"
+            android:layout_marginRight="30dp"
+            android:layout_marginTop="10dp"
+
+            />
+
+    </RelativeLayout>
+
+</androidx.cardview.widget.CardView>
