--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -14,6 +14,18 @@
         android:layout_height="wrap_content"
         android:orientation="vertical">
 
+        <androidx.appcompat.widget.Toolbar
+            android:id="@+id/toolbar"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+
+            android:background="#eeeeef"
+            app:menu="@menu/navigation_menu"
+            app:showAsAction="always"
+
+
+            />
+
 
         <RelativeLayout
             android:layout_width="match_parent"
