--- a/app/src/main/res/menu/navigation_menu.xml
+++ b/app/src/main/res/menu/navigation_menu.xml
@@ -1,13 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android">
+<menu xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    >
     <item android:title="Settings"
-        android:id="@+id/menu_settings"/>
+        android:id="@+id/menu_settings"
+        />
 
     <item android:title="About"
-        android:id="@+id/menu_about"/>
+        android:id="@+id/menu_about"
+        />
 
     <item android:title="Something"
-        android:id="@+id/menu_something"/>
+        android:id="@+id/menu_something"
+        />
 
     <item android:title="Sign Out"
         android:id="@+id/sign_out"/>
